# tpt-astrolink

./: .editorconfig  .gitignore  README.md  spec.txt  todo.md
.github/workflows/: client-ui.yml  cloud-core.yml  edge-agent.yml  relay.yml
client-ui/: Dockerfile  README.md  package-lock.json  package.json
client-ui/src/app/: globals.css  layout.tsx  page.tsx
client-ui/src/components/: MultiTimezoneClocks.tsx  SkyView.tsx  ToONotifications.tsx
client-ui/src/lib/: timezones.test.ts  timezones.ts  types.ts  useTelemetry.test.ts  useTelemetry.ts
cloud-core/: Dockerfile  README.md  go.mod  go.sum
cloud-core/cmd/cloud-core/: main.go
cloud-core/cmd/loadtest/: helpers.go  main.go
cloud-core/internal/astrometry/: solver.go
cloud-core/internal/auth/: auth.go
cloud-core/internal/gateway/: gateway.go  gateway_test.go  integration_test.go  latency_test.go
cloud-core/internal/metrics/: metrics.go
cloud-core/internal/mqttbridge/: bridge.go  bridge_integration_test.go  bridge_test.go
cloud-core/internal/postgres/: store.go
cloud-core/internal/protocol/: protocol.go  protocol_test.go
cloud-core/internal/s3/: client.go
cloud-core/internal/transport/: mqtt.go  mqtt_test.go
cloud-core/internal/worker/: worker.go
docs/: LICENSE  architecture.md  beta-onboarding.md  edge-ai-model.md  ffi-boundary.md  mvp-release-checklist.md  node-operator-guide.md  security-review.md
docs/protocols/: mqtt-contract.md  websocket-contract.md
docs/storage/: postgres-schema.md  s3-layout.md
docs/testing/: hil-ffi-test-plan.md
edge-agent/: Cargo.toml  Dockerfile  LICENSE  README.md
edge-agent/crates/agent/: Cargo.toml
edge-agent/crates/agent/src/: commands.rs  config.rs  devices.rs  main.rs
edge-agent/crates/edge-ai/: Cargo.toml
edge-agent/crates/edge-ai/src/: lib.rs
edge-agent/crates/edge-ai/tests/: accuracy.rs
edge-agent/crates/ffi/: Cargo.toml
edge-agent/crates/ffi/src/: lib.rs
edge-agent/crates/imaging/: Cargo.toml
edge-agent/crates/imaging/src/: lib.rs
edge-agent/crates/mqtt/: Cargo.toml
edge-agent/crates/mqtt/src/: lib.rs
edge-agent/crates/mqtt/tests/: integration.rs
edge-agent/crates/s3/: Cargo.toml
edge-agent/crates/s3/src/: lib.rs
edge-agent/crates/update/: Cargo.toml
edge-agent/crates/update/src/: lib.rs
edge-agent/scripts/: install.sh  release.sh
infra/: docker-compose.yml
infra/aws/: .gitignore  example.tfvars  main.tf  versions.tf
infra/k8s/: cloud-core.yaml
infra/systemd/: tpt-edge-watchdog.service
relay/: Dockerfile  README.md  go.mod
relay/cmd/relay/: main.go
relay/internal/registry/: registry.go
(+5 files in other folders)
