[package]
name = "tpt-edge-update"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tar = "0.4"
flate2 = "1"
sha2 = "0.10"

[[bin]]
name = "tpt-edge-watchdog"
path = "src/bin/watchdog.rs"
